--- a/blog_1.html
+++ b/blog_1.html
@@ -8,7 +8,9 @@
     </head>
     <body> 
         <nav>
-            <a href="bio.html">Biografia de Mara    </a> <a href="blog_1.html">Blog de Mara </a>
+            <a href="bio.html">Biografia de Mara</a> &nbsp; <a href="blog_1.html">Blog de Mara </a> &nbsp; <a href="https://www.google.com.ar"> Buscar en Google </a>
+            <!-- esto es un comentario -->
+            <!--&nbsp; hace un espacio-->
         </nav>
         <ol>
             <li>punto uno</li>
@@ -28,9 +30,7 @@
             este texto con tag inline (strong) queda en negrita<br/>
         </strong>
         
-        <!–– esto es un comentario ––>
-        <img src = "monoLoco.jpg" width="300" height="300">
-        
+        <p><a title="Pobre Mono" href="https://www.facebook.com/citorobledo/about"> <img src = "monoLoco.jpg" width="300" height="300"/> </a></p>
     </body>
-
+    <!--Este mensaje es para el que este viendo el codigo ;)-->
 </html>
