se modifico blog ahora se llama index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body> 
         <nav>
-            <a href="bio.html">Biografia de Mara</a> &nbsp; <a href="blog_1.html">Blog de Mara </a> &nbsp; <a href="https://www.google.com.ar"> Buscar en Google </a>
+            <a href="bio.html">Biografia de Mara</a> &nbsp; <a href="index.html">Blog de Mara </a> &nbsp; <a href="https://www.google.com.ar"> Buscar en Google </a>
             <!-- esto es un comentario -->
             <!--&nbsp; hace un espacio-->
         </nav>
