se modifico el titulo ahora esta centrado, se corrigio el color de background.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <title>Blog de Mara</title>
 <html>
     <head>
-        <h1>Blog de Mara</h1>
+        <h1 style = "text-align:center" >   <u>Blog de Mara</u>   </h1> 
         <h3>Algo que puede ser interesante</h3>
         <h4>links</h4>
-    </head>
+    </head> 
     <body> 
         <nav>
             <a href="bio.html">Biografia de Mara</a> &nbsp; <a href="index.html">Blog de Mara </a> &nbsp; <a href="https://www.google.com.ar"> Buscar en Google </a>
